--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<h3 class="title-third margin-bottom-10px">UP 6000 METERS ABOVE SEA LEVEL</h3>
 						<p class="paragraph margin-bottom-50px">The task of the organization, in particular the further development of various forms of activity, entails a process of implementation and modernization corresponding to the conditions of activation. Thus, the beginning of the daily work of forming a position entails.</p>
 
-						<a href="#" class="btn-text">To learn more &rarr;</a>
+						<a href="#" class="btn-text">Learn more &rarr;</a>
 					</div>
 
 					<div class="col-1-of-2">
@@ -112,7 +112,7 @@
 								<div class="card-tour__backSide-box">
 									<p class="card-tour__text card-tour__text_1">total cost:</p>
 									<p class="card-tour__text card-tour__text_2">599$</p>
-									<a href="#" class="btn btn_animated">to book</a>
+									<a href="#" class="btn btn_animated">book</a>
 								</div>
 							</div>
 						</div>
@@ -140,7 +140,7 @@
 								<div class="card-tour__backSide-box">
 									<p class="card-tour__text card-tour__text_1">total cost:</p>
 									<p class="card-tour__text card-tour__text_2">599$</p>
-									<a href="#" class="btn btn_animated">to book</a>
+									<a href="#" class="btn btn_animated">book</a>
 								</div>
 							</div>
 						</div>
@@ -168,13 +168,13 @@
 								<div class="card-tour__backSide-box">
 									<p class="card-tour__text card-tour__text_1">total cost:</p>
 									<p class="card-tour__text card-tour__text_2">599$</p>
-									<a href="#" class="btn btn_animated">to book</a>
+									<a href="#" class="btn btn_animated">book</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="text-align-center"><a href="#" class="btn btn_animated">to book</a></div>
+				<div class="text-align-center"><a href="#" class="btn btn_animated">book</a></div>
 				
 			</section>
 
