Button text changed

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 						
 					</div>
 				</div>
-				<div class="text-align-center"><a href="#" class="btn btn_animated">забронировать</a></div>
+				<div class="text-align-center"><a href="#" class="btn btn_animated">book</a></div>
 			</section>
 
 			
